--- a/index.html
+++ b/index.html
@@ -1289,6 +1289,22 @@ footer.site-footer{
 
 
 
+.google-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 10px 18px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.google-btn img.google-icon {
+  width: 88px;
+  height: 88px;
+}
+
 </style>
 </head>
 <body>
@@ -1809,10 +1825,12 @@ footer.site-footer{
 
       <div class="join-card">
         <h3>Or continue with</h3>
-        <button id="googleBtn" class="google-btn" aria-label="Continue with Google">
-          <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="" />
-          Continue with Google
-        </button>
+        <button id="googleBtn" class="google-btn no-translate" aria-label="Continue with Google">
+  <img class="google-icon" 
+       src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" 
+       alt="Google logo" />
+  <span data-key="continue-google">Continue with Google</span>
+</button>
       </div>
 
       <button class="floating-home-btn floatHomeBtn" aria-label="Return to site">
@@ -2633,15 +2651,17 @@ function switchLanguage(langCode) {
                 element.textContent = translation.replace('{{year}}', year);
             }
             // Handle all standard text content
-            else {
-                // Check for attribute mapping first
-                if (mapping.attribute) {
-                    element.setAttribute(mapping.attribute, translation);
-                } else {
-                    element.textContent = translation;
-                }
-            }
-            // --- End of Corrected Logic ---
+           else {
+    // Skip Google button so the logo image is not removed
+    if (element.id === 'googleBtn') return;
+
+    if (mapping.attribute) {
+        element.setAttribute(mapping.attribute, translation);
+    } else {
+        element.textContent = translation;
+    }
+}
+
         });
     });
 
@@ -2710,6 +2730,7 @@ document.addEventListener('DOMContentLoaded', () => {
     // Initialize the year for the footer
     document.getElementById('year').textContent = new Date().getFullYear();
 });
+
 
 
 
