--- a/admin.html
+++ b/admin.html
@@ -145,7 +145,11 @@ input, textarea{
     <p id="evStatus" class="small"></p>
   </div>
 
-  
+   <div class="card">
+    <h3>Admin Tools</h3>
+    <p class="small">Whitelisted admins are stored in Realtime DB at <code>/admins/{uid}: true</code></p>
+  </div>
+
 
 </main>
 
