--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,7 @@ footer.site-footer{
       </div>
       <p>We advance inclusive, equitable, and high-quality education for children, youth, and underserved communities. Our initiatives strengthen schools, provide essential learning resources, support teachers, and create opportunities that empower learners to unlock their full potential.</p>
 
-      <a href="#educationPage" class="focus-btn">Learn More</a>
+      <a href=https://webs-star.github.io/swissaid/edu"" class="focus-btn">Learn More</a>
     </div>
 
     <div class="focus-card fade-up">
