--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@ footer.site-footer{
       </div>
       <p>We promote environmental conservation and climate resilience through community-driven initiatives. From tree-planting and clean-ups to awareness programs and sustainable practices, we work to protect ecosystems, restore natural resources, and secure a healthier planet for generations to come.</p>
 
-      <a href="#environmentPage" class="focus-btn">Learn More</a>
+      <a href="https://webs-star.github.io/swissaid/env" class="focus-btn">Learn More</a>
     </div>
 
     <div class="focus-card fade-up">
