--- a/index.html
+++ b/index.html
@@ -1739,7 +1739,7 @@ footer.site-footer{
       </div>
       <p>We improve access to essential healthcare by supporting medical outreach, health education, and critical interventions for vulnerable populations. Our programs focus on disease prevention, maternal and child health, mental wellness, and community health strengthening.</p>
 
-      <a href="#healthPage" class="focus-btn">Learn More</a>
+      <a href="https://webs-star.github.io/swissaid/health" class="focus-btn">Learn More</a>
     </div>
 
     <div class="focus-card fade-up">
@@ -1749,7 +1749,7 @@ footer.site-footer{
       </div>
       <p>We deliver rapid, compassionate assistance to individuals and families affected by crises, disasters, and hardship. Our humanitarian efforts provide lifesaving relief—including food, clean water, shelter, hygiene supplies, and psychosocial support—helping communities rebuild with dignity and hope.</p>
 
-      <a href="#humanitarianPage" class="focus-btn">Learn More</a>
+      <a href="https://webs-star.github.io/swissaid/humanitarian" class="focus-btn">Learn More</a>
     </div>
 
     <div class="focus-card fade-up">
@@ -1759,7 +1759,7 @@ footer.site-footer{
       </div>
       <p>We equip young people with the skills, mentorship, and opportunities they need to lead and thrive. Through leadership training, entrepreneurship programs, life-skills development, and community involvement, we nurture confident, responsible, and empowered youth ready to shape a better tomorrow.</p>
 
-      <a href="#youthPage" class="focus-btn">Learn More</a>
+      <a href="https://webs-star.github.io/swissaid/youth" class="focus-btn">Learn More</a>
     </div>
 
   </div>
