--- a/edu.html
+++ b/edu.html
@@ -85,6 +85,24 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 /* Text overlay */
 .section > *{ position:relative; z-index:2; }
 
+
+
+
+
+
+/* floating home button */
+.floating-home-btn {
+  position: fixed;
+  bottom: 28px;
+  right: 28px;
+  z-index: 99999;
+  border-radius: 16px;
+  padding: 10px 12px;
+  background: #0C2856;
+  border: none;
+  color: white;
+}
+
 </style>
 </head>
 <body>
@@ -158,7 +176,41 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 
 
+
+<a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
+  <button class="floating-home-btn floatHomeBtn" aria-label="Home">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M3 12l9-9 9 9"/>
+      <path d="M9 21V9h6v12"/>
+    </svg>
+  </button>
+</a>
+
+
 <footer>
+
+
+floatHomeBtns.forEach(btn => {
+    btn.addEventListener("click", () => restoreAll());
+  });
+
+});
+
+
+
+
+
+
+
+
+document.addEventListener("DOMContentLoaded", () => {
+
+  const joinPage = document.getElementById("joinPage");
+  const floatHomeBtns = document.querySelectorAll(".floatHomeBtn");
+
+
+
+
     © <script>document.write(new Date().getFullYear());</script> Hybrid Education Centre — All Rights Reserved.
 </footer>
 
