--- a/env.html
+++ b/env.html
@@ -83,6 +83,22 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 .section:nth-of-type(5){ background:linear-gradient(135deg,#f5c400,#d4a500); color:#333; }
 
 .section > *{ position:relative; z-index:2; }
+
+
+    
+
+/* floating home button */
+.floating-home-btn {
+  position: fixed;
+  bottom: 28px;
+  right: 28px;
+  z-index: 99999;
+  border-radius: 16px;
+  padding: 10px 12px;
+  background: #0C2856;
+  border: none;
+  color: white;
+}
 </style>
 </head>
 
@@ -139,6 +155,18 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf">
 </section>
 
+
+
+<a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
+  <button class="floating-home-btn floatHomeBtn" aria-label="Home">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M3 12l9-9 9 9"/>
+      <path d="M9 21V9h6v12"/>
+    </svg>
+  </button>
+</a>
+
+    
 <footer>
     © <script>document.write(new Date().getFullYear());</script> Environmental Stewardship — All Rights Reserved.
 </footer>
