--- a/edu.html
+++ b/edu.html
@@ -85,11 +85,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 /* Text overlay */
 .section > *{ position:relative; z-index:2; }
 
-
-
-
-
-
 /* floating home button */
 .floating-home-btn {
   position: fixed;
@@ -102,7 +97,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
   border: none;
   color: white;
 }
-
 </style>
 </head>
 <body>
@@ -115,67 +109,98 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <div class="empty"></div>
 </header>
 
-<!-- Existing sections -->
+<!-- Section 1: Overview -->
 <section class="section">
     <div class="text">
-        <h2>Hybrid Learning for Youth</h2>
-        <p>Our Hybrid Education Centre blends in–person training, digital learning, and hands-on practicals to equip young people with relevant skills for a changing world. We combine flexible online modules, mentorship, community projects, and real-world fieldwork across Agriculture, Entrepreneurship, and Information Technology.</p>
+        <h2>Hybrid Education Overview</h2>
+        <p>We provide flexible digital and in-school learning support to children and youth across Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa. Our hybrid model combines technology access, community-based tutoring, skills development, and school support, ensuring that every learner can access quality education.</p>
+        <p>Through online modules, mentorship, practical fieldwork, and structured study sessions, students gain knowledge, confidence, and digital literacy to succeed in the 21st century.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round" alt="Hybrid Learning Image 1">
+    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round" alt="Hybrid Learning Overview">
 </section>
 
+<!-- Section 2: Why Hybrid Learning -->
 <section class="section">
     <div class="text">
-        <h2>Agriculture & Agribusiness Skills</h2>
-        <p>We train youth in climate-smart agriculture, modern farming techniques, agribusiness management, value-addition, and market linkage. Through demonstration plots, field visits, and digital farm tools, learners gain practical skills to start profitable agriventures and support community food systems.</p>
+        <h2>Why Hybrid Learning?</h2>
+        <p>Kenya faces large education gaps: overcrowded classrooms, limited digital access in rural and peri-urban areas, high cost of online learning, and lack of after-school support. Hybrid education bridges these gaps by combining:</p>
+        <ul>
+            <li>Digital lessons accessible online and offline</li>
+            <li>Community learning hubs and study centers</li>
+            <li>School-based tutoring and mentorship</li>
+            <li>Home-based support through worksheets and mobile tutors</li>
+            <li>Skill development in ICT, entrepreneurship, and STEM</li>
+        </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded" alt="Agriculture Image">
+    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded" alt="Why Hybrid Learning">
 </section>
 
+<!-- Section 3: County Focus -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal" alt="Entrepreneurship Image">
+    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal" alt="Counties">
     <div class="text">
-        <h2>Entrepreneurship & Innovation</h2>
-        <p>Our entrepreneurship program teaches young people how to develop business ideas, create business models, practice financial literacy, and build real micro-enterprises. Learners receive mentorship, incubation support, and opportunities to pitch their ideas to investors, improving employment and income generation prospects.</p>
+        <h2>Counties We Serve</h2>
+        <p>Our programs are active in:</p>
+        <ul>
+            <li><strong>Nairobi:</strong> Urban and informal settlement learners, digital clubs, safe weekend hubs, ICT skills and youth empowerment.</li>
+            <li><strong>Murang’a:</strong> Rural learners, community hybrid hubs, girls' mentorship, school tree planting, environmental education.</li>
+            <li><strong>Kiambu:</strong> High youth population, digital literacy classes, coding, after-school tutoring centers.</li>
+            <li><strong>Nakuru:</strong> Mixture of rural and urban learners, STEM mentorship, hybrid labs, teacher capacity-building.</li>
+            <li><strong>Machakos:</strong> Distance challenges addressed by hybrid model, weekend digital lessons, after-school hubs.</li>
+            <li><strong>Mombasa:</strong> Coastal youth, blended learning, vocational skills, girls empowerment, community study centers.</li>
+        </ul>
     </div>
 </section>
 
+<!-- Section 4: Program Activities -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon" alt="IT Program Image">
+    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon" alt="Program Activities">
     <div class="text">
-        <h2>Information Technology & Digital Skills</h2>
-        <p>We prepare youth for the digital future through computer literacy, web design, data skills, digital marketing, and online work readiness. Guided by instructors and practical assignments, youth learn to use technology for employment, business growth, and creative problem-solving.</p>
+        <h2>Program Activities</h2>
+        <ul>
+            <li><strong>Digital Learning Access:</strong> Tablets, online/offline lessons, low-data solutions.</li>
+            <li><strong>Community Hybrid Learning Hubs:</strong> Safe spaces with internet, mentors, quiet study zones, girls' STEM clubs.</li>
+            <li><strong>School Visits & Support:</strong> Teacher training, mentorship, digital labs, study materials.</li>
+            <li><strong>Youth Skills Development:</strong> ICT, coding, digital marketing, entrepreneurship, career guidance.</li>
+            <li><strong>Home-Based Support:</strong> Mobile tutors, worksheets, radio/audio lessons, WhatsApp homework help.</li>
+        </ul>
     </div>
 </section>
 
+<!-- Section 5: Impact -->
 <section class="section center-section">
     <div class="text">
-        <h2>Empowering Youth for the Future</h2>
-        <p>The Hybrid Education Centre builds confidence, leadership, critical thinking, and real-world readiness. Through mentorship, peer collaboration, and structured learning pathways, youth become empowered contributors to their communities — ready to succeed in farming, business, digital careers, and social impact.</p>
+        <h2>Program Impact</h2>
+        <p>Across the six counties, our hybrid education program has:</p>
+        <ul>
+            <li>Reached hundreds of learners with digital and physical support</li>
+            <li>Established multiple community learning hubs</li>
+            <li>Trained teachers and youth mentors</li>
+            <li>Provided devices and learning materials to students</li>
+            <li>Empowered girls in STEM and leadership programs</li>
+            <li>Improved exam readiness, digital literacy, and vocational skills</li>
+            <li>Integrated environmental education through school tree planting initiatives</li>
+        </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf" alt="Youth Empowerment Image">
+    <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf" alt="Program Impact">
 </section>
 
-<!-- Swiss Aid Connect Hybrid Learning Center Section -->
+<!-- Swiss Aid Connect Section -->
 <section class="section swiss center-section">
     <div class="text">
         <h2>Swiss Aid Connect Foundation - Hybrid Learning Centers</h2>
-        <p>Sub-Saharan Africa faces profound tertiary education challenges. Our scalable hybrid model integrates top-tier digital education, AI-driven personalization, and local mentorship to bridge gaps effectively.</p>
-        <p><strong>Program Highlights:</strong> Online courses from top universities, live sessions with professors & entrepreneurs, tutor guidance, AI-supported learning, hands-on entrepreneurship, certification, and reliable technical infrastructure using Starlink and solar power.</p>
-        <p><strong>Curriculum:</strong> Introduction to Entrepreneurship → Opportunity Discovery → Business Model → Marketing → Pitch Development. Elective modules: Digital Skills, Vocational Training, Academic Programs.</p>
-        <p><strong>Impact:</strong> Centers in Kenya have been established in:</p>
+        <p>Our scalable hybrid model integrates top-tier digital education, AI-driven personalization, and local mentorship to bridge gaps effectively. Program highlights include:</p>
         <ul>
-            <li>Mombasa</li>
-            <li>Nairobi</li>
-            <li>Thika</li>
-            <li>Kiambu</li>
+            <li>Online courses from top universities</li>
+            <li>Live sessions with professors and entrepreneurs</li>
+            <li>Tutor guidance and AI-supported learning</li>
+            <li>Hands-on entrepreneurship and certification</li>
+            <li>Reliable technical infrastructure (Starlink & solar power)</li>
         </ul>
-        <p>These centers have trained over 300 students and launched multiple startups, providing youth with skills, entrepreneurship opportunities, and digital literacy.</p>
+        <p>Curriculum: Introduction to Entrepreneurship → Opportunity Discovery → Business Model → Marketing → Pitch Development. Elective modules include Digital Skills, Vocational Training, and Academic Programs.</p>
+        <p>Impact: Centers established in Mombasa, Nairobi, Thika, and Kiambu have trained over 300 students and launched multiple startups, providing youth with skills, entrepreneurship opportunities, and digital literacy.</p>
     </div>
 </section>
-
-
-
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
   <button class="floating-home-btn floatHomeBtn" aria-label="Home">
@@ -186,9 +211,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
   </button>
 </a>
 
-
 <footer>
-
     © <script>document.write(new Date().getFullYear());</script> Hybrid Education Centre — All Rights Reserved.
 </footer>
 
