--- a/youth.html
+++ b/youth.html
@@ -84,9 +84,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 .section > *{ position:relative; z-index:2; }
 
-
-    
-
 /* floating home button */
 .floating-home-btn {
   position: fixed;
@@ -110,53 +107,59 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <div class="empty"></div>
 </header>
 
-<!-- 1. Youth Leadership -->
+<!-- 1. Overview of Youth Empowerment -->
 <section class="section">
     <div class="text">
-        <h2>Leadership Development</h2>
-        <p>We nurture leadership skills in youth through training, mentorship, and opportunities to lead projects. Our programs empower young people to take initiative and become change agents in their communities.</p>
+        <h2>Overview of Youth Empowerment</h2>
+        <p>Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
 </section>
 
-<!-- 2. Life Skills Training -->
+<!-- 2. Mentorship & Leadership -->
 <section class="section">
     <div class="text">
-        <h2>Life Skills & Confidence</h2>
-        <p>Our programs focus on building communication, problem-solving, critical thinking, and decision-making skills. Youth gain confidence and resilience to navigate challenges in personal and professional life.</p>
+        <h2>Mentorship & Leadership Development</h2>
+        <p>Youth mentorship programs provide guidance and leadership training in Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
 </section>
 
-<!-- 3. Entrepreneurship & Startups -->
+<!-- 3. Life Skills & Education -->
 <section class="section center-section">
     <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
     <div class="text">
-        <h2>Entrepreneurship Programs</h2>
-        <p>Youth receive hands-on guidance to create businesses, develop financial literacy, and implement innovative ideas. Incubation support and mentorship help launch successful startups.</p>
+        <h2>Life Skills & Education</h2>
+        <p>We offer programs on decision-making, problem-solving, civic engagement, STEM initiatives, vocational training, and internships. County-specific programs include Nakuru (Njoro youth sports & arts), Machakos (coding clubs & civic leadership), and Mombasa (Likoni & Kisauni volunteer projects).</p>
     </div>
 </section>
 
-<!-- 4. Community Engagement -->
+<!-- 4. Entrepreneurship & Economic Opportunities -->
 <section class="section">
     <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon">
     <div class="text">
-        <h2>Community Projects</h2>
-        <p>We encourage young people to engage in social initiatives that address local challenges. Projects in health, environment, and education foster civic responsibility and social impact.</p>
+        <h2>Entrepreneurship & Economic Opportunities</h2>
+        <p>Youth business incubation, microfinance, and entrepreneurship programs are implemented in Kiambu, Mombasa, and Nairobi. These initiatives include mentorship, start-up support, and access to local markets, empowering youth to develop sustainable income streams.</p>
     </div>
 </section>
 
-<!-- 5. Digital Skills & Mentorship -->
+<!-- 5. Sports, Arts & Civic Engagement -->
 <section class="section center-section">
     <div class="text">
-        <h2>Digital Skills & Mentorship</h2>
-        <p>Youth gain exposure to coding, data, digital marketing, and online collaboration tools. Mentorship from professionals guides them to use technology to enhance learning, employability, and entrepreneurship.</p>
+        <h2>Sports, Arts & Civic Engagement</h2>
+        <p>Youth participate in county-specific sports leagues, music, art, and volunteerism programs. Nairobi and Nakuru host competitive leagues and creative arts events; Machakos and Muranga focus on civic projects and leadership; Mombasa promotes entrepreneurship and community service; Kiambu encourages innovation challenges.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf">
 </section>
 
-
-
+<!-- 6. Digital Inclusion & Innovation -->
+<section class="section">
+    <div class="text">
+        <h2>Digital Inclusion & Innovation</h2>
+        <p>ICT, coding, robotics, and digital literacy programs are active across all six counties. Youth gain access to technology hubs, mentorship, and online platforms, ensuring inclusion of youth with disabilities while promoting innovation, collaboration, and employability.</p>
+    </div>
+    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
+</section>
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
   <button class="floating-home-btn floatHomeBtn" aria-label="Home">
